# logic-resolver

./: Cargo.toml
benches/: big_statement.rs
src/: lib.rs  main.rs
