[package]
name = "resolution"
version = "0.1.0"
authors = ["Lauri Gustafsson <me@gustafla.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = { version = "1.10.0", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "big_statement"
harness = false
